config/backstage/backstage-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      serviceAccountName: backstage-service-account
      containers:
        - name: backstage
          image: ghcr.io/sanveld/devplatform-backstage-backend:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 7007
