config/backstage/backstage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage-lb-svc
  namespace: backstage
spec:
  type: LoadBalancer
  selector:
    app: backstage
  ports:
  - protocol: TCP
    port: 55555
    targetPort: http
