config/backstage/backstage-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage
  namespace: backstage
spec:
  selector:
    app: backstage
  ports:
    - name: http # Port name referenced by Ingress
      port: 80 # Internal ClusterIP service port (can be anything, but 80 is common)
      targetPort: 7007 # The ACTUAL port your Backstage container listens on
  type: ClusterIP # <-- CHANGE THIS from LoadBalancer
