config/backstage/backstage-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: backstage
  namespace: backstage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`backstage.everythingascode.dev`)
      kind: Rule
      services:
        - name: backstage
          port: 80
  tls:
    secretName: backstage-tls
